--- a/pages/after-sales/after-sales.less
+++ b/pages/after-sales/after-sales.less
@@ -35,8 +35,17 @@ page{
       .descript{
         padding-left: 10rpx;
       }
-      .descript_input{
-        width: 100%;
+      .descript_area{
+          padding-left: 10rpx;
+          padding-top: 10rpx;
+          .descript_border{
+              padding: 10rpx;
+              border: solid 2rpx rgb(27,180,172);
+              border-radius: 6rpx;
+              .descript_input{
+                  width: 100%;
+                }
+          }
       }
     }
     .btn_wrap{
