--- a/pages/waitreceiveorder/waitreceiveorder.wxss
+++ b/pages/waitreceiveorder/waitreceiveorder.wxss
@@ -27,51 +27,44 @@ page {
   font-size: 34rpx;
   padding-left: 10rpx;
 }
-.cart_content .cart_main .shop_wrap .cart_item {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea {
   display: flex;
   padding: 10rpx;
-  border-bottom: 1px solid #12a8a9;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_check_wrap {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cart_content .cart_main .shop_wrap .cart_item .cart_imt_wrap {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_imt_wrap {
   flex: 2;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_imt_wrap image {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_imt_wrap image {
   width: 200rpx;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap {
   flex: 4;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_name {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_name {
   display: -webkit-box;
   overflow: hidden;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   color: #666;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_price_wrap {
   display: flex;
   justify-content: space-between;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .goods_price {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_price_wrap .goods_price {
   color: #c93636;
   font-size: 34rpx;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_price_wrap .cart_bum_tool {
   display: flex;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool .num_edit {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_price_wrap .cart_bum_tool .num_edit {
   width: 66rpx;
   height: 66rpx;
   display: flex;
@@ -80,12 +73,41 @@ page {
   border: 1rpx solid #ccc;
   border-radius: 10rpx;
 }
-.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool .goods_num {
+.cart_content .cart_main .shop_wrap .cart_item .cartarea .cart_info_wrap .goods_price_wrap .cart_bum_tool .goods_num {
   width: 56rpx;
   height: 56rpx;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.cart_content .cart_main .shop_wrap .cart_item .btn_area {
+  padding-top: 16rpx;
+  padding-bottom: 16rpx;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #57bdc0;
+}
+.cart_content .cart_main .shop_wrap .cart_item .btn_area .commit_btn {
+  flex: 1;
+}
+.cart_content .cart_main .shop_wrap .cart_item .btn_area .returns_btn {
+  flex: 1;
+  font-size: 38rpx;
+  font-weight: 600;
+  border-radius: 6rpx;
+  border: solid #7aaaac 2rpx;
+  margin-left: 40rpx;
+  margin-right: 40rpx;
+}
+.cart_content .cart_main .shop_wrap .cart_item .btn_area .evaluate_btn {
+  flex: 1;
+  font-size: 38rpx;
+  font-weight: 600;
+  border-radius: 6rpx;
+  border: solid #7aaaac 2rpx;
+  margin-left: 40rpx;
+  margin-right: 40rpx;
 }
 .cart_content .cart_main .shop_wrap .order_Info {
   display: flex;
@@ -119,6 +141,13 @@ page {
 .cart_content .cart_main .shop_wrap .btn_wrap {
   padding-top: 16rpx;
   padding-bottom: 16rpx;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #57bdc0;
+}
+.cart_content .cart_main .shop_wrap .btn_wrap .commit_btn {
+  flex: 1;
 }
 .footer_tool {
   position: fixed;
