--- a/pages/history/history.wxml
+++ b/pages/history/history.wxml
@@ -1,2 +1,26 @@
-<!--pages/history/history.wxml-->
-<text>pages/history/history.wxml</text>
+<view class="cart_content">
+    <view class="cart_main">
+        <block wx:if="{{order.length!=0}}">
+            <view class="shop_wrap" wx:for="{{collection}}" wx:key="{{goods.goodsId}}">
+                <view class="cart_item">
+                    <view class="cartarea">
+                        <!-- 商品图片 -->
+                        <navigator class="cart_imt_wrap" url="../../pages/detail/detail?goodsId={{item.goods.goodsId}}">
+                            <image mode="widthFix" src="{{item.goods.goodsImage}}"></image>
+                        </navigator>
+                        <!-- 商品信息 -->
+                        <view class="cart_info_wrap">
+                            <view class="goods_name">{{item.goods.goodsName}}</view>
+                            <view class="goods_price_wrap">
+                                <view class="goods_price">￥{{item.goods.goodsPrice}}</view>
+                                <view class="cart_bum_tool">
+                                    <view class="goods_num">{{item.date}} {{item.time}}</view>
+                                </view>
+                            </view>
+                        </view>
+                    </view>
+                </view>
+            </view>
+        </block>
+    </view>
+</view>
